mTime/mTime/Content/Other_style.css
/*.rtpt_deletebtn {
    width: initial;
    height: 30px;
    line-height: 30px;
    padding: 0 10px;
    margin: 0 0 0 10px;
    font-size: 14px;
    float: right;
    border-radius: 5px;
    background-color: #f00;
    color: #fff;
    cursor: pointer;
}

.body_center .bd_ctr_rightpart .ctr_rtpt_box {
    height:515px !important;
}


    .body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_rtpt_b_ftr {
        background-color: #eee !important;
        z-index: 1;
    }


.ctr_rtpt_popupbox .rtpt_popupbox_inb .popupbox_inb_icon_blue {
    width: 100%;
    height: initial;
    float: left;
    color: #0069ae;
    text-align: center;
    font-size: 66px;
}

.overflow_box {
    width: 100%;
    height: 445px;
    float: left;
    overflow: auto;
}

.body_center .bd_ctr_rightpart{
    z-index:2 !important;
}

.bg_color_w {
    width:100%; 
    height:100%; 
    position:fixed; 
    top:0; 
    left:0; 
    background-color:#fff; 
    z-index:1;
}




.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_rtpt_addbox .rtpt_addbox_part .rtpt_addbox_checkbox input {
    width: 30px !important;
    float: left;
    margin: 0 0 0 10px;
    border: 1px #aaa solid !important;
}


.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_rtpt_addbox .rtpt_addbox_part .rtpt_addbox_pt_tt {
    width: 150px !important;
}

.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_rtpt_addbox{
    width:550px !important;
}

.header_part2{
    position:relative;
    z-index:10;
}

.rtpt_ftr_addbtn a, .rtpt_closebtn a {
    color: #fff;
    text-decoration: none;
    font-size: 14px;
}


.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_holiday_addbox .hlday_addbox_part .checkbox1 {
    float: left;
    width: 17px !important;
    height: 17px !important;
    margin: 7px 0 0 10px !important;
}

.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_holiday_addbox .hlday_addbox_part .check-box {
    float: left;
    width: 17px !important;
    height: 17px !important;
    margin: 0 0;
}

.rtpt_savebtn, .rtpt_deletebtn {
    border: 0;
}

.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_holiday_addbox .hlday_addbox_part .hlday_addbox_pt_ttbox {
    width: 370px;
    height: 30px;
    float: right;
    line-height: 30px;
    font-size: 14px;
    padding: 0 10px;
    background-color: #dddd;
    border: 1px #aaa solid;
    pointer-events: none;
}

.body_center .bd_ctr_rightpart .ctr_rtpt_box .ctr_holiday_addbox .hlday_addbox_part .hlday_addbox_pt_tt{
    font-weight:normal;
}

td .check-box {
    width: 17px;
    height: 17px;
    margin: 0 0 -4px 0;
    float: left;
}*/

.li_level01:hover {
    background-color: transparent !important;
}

.li_level02:hover {
    background-color: transparent !important;
}

.li_level03:hover {
    background-color: #e1ffd4 !important;
}

.profile_update_box {
    width: 550px;
    height: initial;
    min-height: 300px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-color: #ddd;
    border-radius: 5px;
    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
    z-index: 1; 
}

.profile_update_box .profile_update_b_htr {
    width: 100%;
    height: 40px;
    line-height: 40px;
    float: left;
    font-size: 14px;
    color: #fff;
    border-radius: 5px 5px 0 0;
    padding: 0 10px;
    background-color: #222; 
}

.profile_update_box .profile_update_b_ttarea {
    width: 150px;
    line-height: 30px;
    font-size: 12px;
    color: #333;
    padding: 10px 10px;
    background-color: #fff; 
}

.profile_update_box .ctr_rtpt_addbox {
    width: 550px;
    height: initial;
    /* padding: 10px; */
    /* position: absolute; */
    left: 50%;
    top: 50%;
    /* transform: translate(-50%, -50%);  */
    display: inline-block;
}

.profile_update_box .rtpt_label_part {
    float: left;
    display: block;
}

.profile_update_box .rtpt_addbox_part {
    width: 80% !important;
}

.profile_update_box .rtpt_addbox_pt_error {
    width: 100%;
    line-height: 20px;
    float: left;
    color: #ff0000;
    font-size: 12px;
    text-align: right; 
}

.profile_update_box .profile_update_b_ftr {
    width: 100%;
    height: 30px;
    float: left;
    padding: 0 10px;
    margin: 5px 0; 
}

.profile_update_box .profile_update_save_ok_popup {
    width: 100%;
    height: 515px;
    position: absolute;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.35); 
}

.profile_update_box .rtpt_popupbox_inb {
    width: 500px;
    height: initial;
    padding: 15px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-color: #fff;
    border-radius: 5px;
    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
    z-index: 10; 
}

